--- a/website/public/style.css
+++ b/website/public/style.css
@@ -1,102 +1,156 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inder&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
 *{
-    margin: 0px;
-    padding:0px;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
 }
 
 .home{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap:320px;
-    padding:150px 0px;
     position: relative;
-}
-
-.heading{
     display: flex;
     flex-direction: column;
-    width: 40%;
+    justify-content: center;
+    padding-left:60px;
+    height: 90vh;
 }
 
-.heading h1{
-    font-size: 60px;
+.wave{
+    width:100vw;
+    height:80vh;
+    position: absolute;
+    z-index: -1;
+    top:0;
+    left: 0;
+}
+
+.home-heading{
+    font-family: "Poppins", sans-serif;
+    color:white;
+    font-weight: 100;
+}
+
+.home-heading h2{
+    font-size:70px;
+}
+
+.home-heading p{
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.home-heading button{
+    padding: 10px 20px;
+    margin-top: 40px;
+    border: none;
+    outline: none;
+    color: #0099ff;
+    font-size: 15px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    width:200px;
+    border-radius: 20px;
+}
+
+.rocket{
+    width:300px;
+    position: absolute;
+    right:260px;
+    top:260px;
+    animation: moveRocket 2s linear infinite;
+}
+
+@keyframes moveRocket {
+    0% { top: 230px; }
+    50% { top: 200px; }
+    100% { top: 230px; }
+}
+
+.signup{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap : 50px;
+}
+
+.signup-content h1{
+    margin-right: auto;
+    width: 60%;
     font-weight: 300;
 }
 
-.heading p{
-    font-size:15px;
-    color:#2d2d2d;
+.signup-content{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 50px;
+    font-family: "Poppins", sans-serif;
 }
 
-.login{
-    width:30%;
-    padding-block:40px;
-}
-
-.user-inputs{
+.inputs{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    width:80%;
-    margin: 0 auto;
-}
-
-.user-inputs > h2{
-    font-weight:300;
-    margin-right:auto;
-    margin-block:20px;
+    margin-top: 20px;
 }
 
 .input-container{
-    width:100%;
-    position: relative;
-}
-
-.input-container img{
-    position: absolute;
-    top: 18px;
-    left:5px;
-}
-
-.input{
-    width: 100%;
-    height:40px;
-    margin: 10px 0;
-    border: 1px solid #2d2d2d;
-    border-radius: 2px;
-    padding-inline:40px;
-}
-
-.signin{
     display: flex;
     align-items: center;
-    justify-content: center;
-    gap:10px;
-    width: 100%;
-    height:40px;
-    margin: 10px 0;
-    border-radius: 5px;
-    border:0px;
-    outline:none;
-    background-color: #FE9E54;
-    color:white;
+    margin-bottom: 20px;
+    position: relative;
+    width:100%;
+}
+
+.input-container input{
+    width: 400px;
+    height: 40px;
+    padding: 10px;
+    border: 1px solid black;
+    outline: none;
+    font-size: 15px;
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    padding-inline:30px;
+    border-radius: 8px;
+}
+
+.input-container button{
+    background-color: #6e31ed;
+    color: white;
+    height: 40px;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 8px;
     cursor: pointer;
+    transition: all 0.3s ease;
+    width: 400px;
     text-transform: uppercase;
-    margin-top:20px;
 }
 
-.links{
-    font-size: 12px;
-    margin-left: auto;
+.input-container p{
+    font-size: 15px;
+    margin-left:auto;
 }
 
-.links span{
-    color:black;
+.input-container span{
+    font-size: 15px;
+    color: #6e31ed;
     cursor: pointer;
+    margin-left:2px;
+}
+
+.signup-image{
+    width: 40%;
+}
+
+.signup-image img{
+    width: 100%;
+    margin-top:50px;
+    margin-left:50px;
+}
+
+.input-container h4{
+    font-weight: 400;
 }
 
 .google-btn{
@@ -115,10 +169,33 @@
     text-transform: uppercase;
 }
 
-.road{
-    position: absolute;
-    top: 30px;
-    z-index: -1;
-    left:-30px;
-    width:1050px;
+.upload{
+    padding:50px 150px;
+    font-family: "Poppins", sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap:50px;
+}
+
+.upload-heading{
+    font-weight: 300;
+    margin-top: 50px;
+}
+
+.upload-main-content{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap:60px;
+}
+
+.upload-container{
+    height: 250px;
+    width: 400px;
+    border: 1px solid black;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
