--- a/website/public/style.css
+++ b/website/public/style.css
@@ -327,6 +327,7 @@
 
 .damage_type{
     margin-block:50px;
+    margin-left:30px;
 }
 
 .damage_type h3{
@@ -391,4 +392,46 @@
     flex-wrap: wrap;
     padding-left: 15px;
     gap:30px;
+}
+
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    background: white;
+    padding: 20px;
+    border-radius: 20px;
+
+    position: relative;
+
+    display: flex;
+    align-items: center;
+}
+
+.modal-image {
+    border-radius:20px;
+    width: 590px;
+    height:590px;
+}
+
+.modal-details {
+    margin-left: 20px;
+}
+
+.modal-details p{
+    color:rgb(46, 46, 46)
+}
+
+.modal-details p span{
+    font-weight: 500;
+    font-size: 20px;
 }
